--- a/app/src/main/res/layout/item_assinante.xml
+++ b/app/src/main/res/layout/item_assinante.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -57,4 +57,4 @@
             app:layout_constraintTop_toBottomOf="@id/assinante_bairro"
             tools:text="Periodo de assinatura: 10/01/2019 - 10/01/2020" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
