--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="verdeAgua">#0BBF7C</color>
     <color name="azul">#009AFF</color>
     <color name="amarelo">#FFD600</color>
+    <color name="amareloClaro">#D1AE5D</color>
     <color name="amareloEscuro">#E2B500</color>
     <color name="laranja">#FF7031</color>
 
