--- a/app/src/main/res/layout/detalhes_rota.xml
+++ b/app/src/main/res/layout/detalhes_rota.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/assinantes_recyclerView"
+        android:id="@+id/detalhes_rota_assinantes_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingBottom="80dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -18,13 +18,4 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_assinante" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/assinantes_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:src="@android:drawable/ic_input_add"
-        android:tint="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
