--- a/app/src/main/res/menu/menu_detalhes_rota.xml
+++ b/app/src/main/res/menu/menu_detalhes_rota.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_editar"
+        android:icon="@drawable/ic_editar_branco"
+        android:title="Deletar"
+        app:showAsAction="always|collapseActionView" />
+
+    <item
         android:id="@+id/menu_deletar"
         android:icon="@drawable/ic_delete_branco"
         android:title="Deletar"
