--- a/app/src/main/res/layout/fragment_rotas.xml
+++ b/app/src/main/res/layout/fragment_rotas.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rotas_recyclerView"
+        android:id="@+id/fragment_rotas_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
@@ -16,10 +16,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_rotas" />
+        tools:listitem="@layout/item_rota" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/rotas_fab"
+        android:id="@+id/fragment_rotas_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
