--- a/app/src/main/res/layout/item_rota.xml
+++ b/app/src/main/res/layout/item_rota.xml
@@ -36,16 +36,19 @@
         app:layout_constraintTop_toBottomOf="@id/item_rota_descricao"
         tools:text="Cadastrados: 5/9" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_rota_iniciar_rota"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:background="?android:selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:padding="8dp"
-        android:src="@drawable/ic_iniciar_rota"
         android:tint="@color/azul"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_iniciar_rota" />
 
     <View
         android:id="@+id/divider"
